# game-rs

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: cube.frag  cube.vert  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  main.rs  render_gl.rs  resources.rs
src/camera/: basic.rs  mod.rs  movement.rs  target_camera.rs
src/maths/: mod.rs
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs  texture.rs  viewport.rs
src/world/: block.rs  chunk.rs  direction.rs  light.rs  mod.rs  position.rs  world.rs
src/world/block/: block.rs  block_face.rs  material.rs  mod.rs
src/world/chunk/: chunk.rs  chunk_mesh.rs  mod.rs
