[package]
name = "game"
version = "0.1.0"
authors = ["Cameron Clough <cameronjclough@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.2.9"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.6"
render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.19.0"
floating-duration = "0.1.2"
image = "0.22.3"
half = "1.4.0"

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
