[package]
name = "game"
version = "0.1.0"
authors = ["Cameron Clough <cameronjclough@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.2.9"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.6"
render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.25.2"
floating-duration = "0.1.2"
image = "0.23.14"
half = "1.4.0"

[dependencies.sdl2]
version = "0.33"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
